# python-study

./: README.md
coroutine/: .gitignore  01_1_grep_coroutine.py  01_2_decorated_coroutine.py  01_3_throw_exception.py  01_4_bogus_example.py  02_1_follow_print.py  02_2_filter.py  02_3_broadcast.py  03_1_sample_xml_sax.py  03_2_bus_event_dispatch.py  03_3_bus_event_dispatch_filter.py  03_4_threaded_bus_event.py  README.md  pyproject.toml
coroutine/libs/: buses.py  cobroadcast.py  cofollow.py  coprocess.py  coroutine.py  cosax.py  cothread.py  grep.py  sinks.py
generators/: 01_1_run_iterator.py  02_1_run_generator.py  03_1_generate_data.sh  03_2_read_from_dir.py  04_1_parse_apache.py  05_1_follow.py  07_1_consumer.py  07_1_producer.py  07_2_producer_consumer.py  08_1_multiplex.py  08_2_broadcast.py  08_3_consumer_thread.py  09_1_trace.py  09_2_store_list.py  09_3_shutdown.py  09_4_ignore_generatorexit.py  09_5_shutdown_thread_generator.py  09_6_shutdown_thread_generator.py  10_1_incremental_parsing.py  11_1_intro_to_coroutine.py  11_2_wrapped_coroutine.py  11_3_coroutine_broadcast.py  README.md  apachelog.py  consumer.py  fieldmap.py  follow.py  gen_apache.py  gencat.py  iteration.py  linesdir.py  producer.py  pyproject.toml  receivefrom.py  sendto.py
generators/libs/: apachelog.py  broadcast.py  consumercoroutine.py  genmessages.py  genmulti.py  genopen.py  genqueue.py  genreceive.py  genrecord.py  gentrace.py  iteration.py  linesdir.py  logcoroutine.py  receivefrom.py  recvcount.py  select.py  sendto.py  storelast.py  thrsend.py
