[tool.poetry]
name = "generators"
version = "0.1.0"
description = ""
authors = ["Edgar <elcchan99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pytz = "^2021.1"
Faker = "^8.12.1"
numpy = "^1.21.2"
tzlocal = "^3.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
